my-store/k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
      matchLabels:
        component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: sachinpoddar/my-store
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
